# infrastructure-hw

./: README.md  docker-compose.yml  pyproject.toml  run.sh
hello_broadcaster/: Dockerfile  broadcast_service.py  pyproject.toml
hello_receiver/: Dockerfile  pyproject.toml  receiver.py  receiver_service.py
hello_receiver/static/: index.html
hello_receiver/templates/: index.html
k8/: hello-broadcaster-deployment.yaml  hello-broadcaster-service.yaml  hello-receiver-deployment.yaml  hello-receiver-service.yaml
