[tool.poetry]
name = "hello-broadcaster"
version = "0.1.0"
description = ""
authors = ["Josh Bouganim <joshbouganim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"
requests = "^2.32.3"
websockets = "^13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
